@@ -15,8 +15,12 @@ NEW FEATURES
     o   unique and duplicated methods now work on unkeyed tables (comparing
         all columns in that case) and both now respect machine tolerance for
         double precision columns, implementing FR#1626 and fixing bug #1632.
-        The help page has been updated accordingly. Thanks to questions by
-        Iterator and comments by Allan Engelhardt on Stack Overflow.
+        Their help page has been updated accordingly with detailed examples.
+        Thanks to questions by Iterator and comments by Allan Engelhardt on
+        Stack Overflow.
+        
+    o   A new method as.data.table.list has been added, since passing a (pure)
+        list to data.table() now creates a single list column.
     
 
 BUG FIXES
@@ -31,7 +35,10 @@ BUG FIXES
     o   A crash bug is fixed when j returns a (strictly) NULL column next
         to a non-empty column, #1633. This case was anticipated and coded
         for but an errant LENGTH() should have been length(). Thanks
-        to Dennis Murphy for reporting. 
+        to Dennis Murphy for reporting.
+        
+    o   The first column of data.table() can now be a list column, fixing
+        #1640. Thanks to Stavos Macrakis for reporting.
 
 
         *********************************************
